# cmake_template

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
